upgrade gradle, refactor async download, support windows compile